# santa-picker

./: Cargo.toml  input.toml
src/: group.rs  main.rs  person.rs  picker.rs
