[package]
name = "santa-picker"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand = "0.8.5"
serde = { version = "1.0.193", features = ["derive"] }
toml = "0.8.8"
uuid = { version = "1.6.1", features = ["v4"] }
